<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/latestBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_latest"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginRight="2.5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/latest"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/latest"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/categoriesBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/btn_categories"
            android:orientation="vertical"
            android:layout_marginLeft="2.5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/category"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/categories"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:id="@+id/myAppBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/btn_myapps"
            android:orientation="vertical"
            android:layout_marginRight="2.5dp">



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/cloud"
                android:background="@android:color/transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/myApps"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/updateAppsBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/btn_update_background"
            android:orientation="vertical"
            android:layout_marginLeft="2.5dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/update"
                android:background="@android:color/transparent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update_app_title"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
