<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/RelativeLayout1"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/app"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="0.6"
            android:src="@drawable/alfredo_splash"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dasUser"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imageView1"
                android:layout_marginBottom="10dp"
                android:drawablePadding="1dp"
                android:hint="@string/user"
                android:inputType="text"
                android:isScrollContainer="false"
                android:maxLines="1"
                android:minLines="1"
                android:selectAllOnFocus="true"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/dasUser"
                android:layout_marginBottom="20dp"
                android:drawablePadding="1dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"/>

            <RelativeLayout
                android:id="@+id/load"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/enter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_enter"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/enter"
                    android:textColor="@color/White"
                    android:textSize="@dimen/TextBig"
                    android:textStyle="bold"/>

                <ProgressBar
                    android:id="@+id/loginProgress"
                    style="android:attr/progressBarStyleInverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:indeterminate="true"
                    android:visibility="gone"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>