<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/root"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:focusable="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangle_shape"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/appIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/appRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:progressDrawable="@drawable/rating_bar_big_full"
                        android:rating="2"/>

                    <TextView
                        android:id="@+id/appName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="EU ALFRED"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/TextBig"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/authorName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="ABELSSOFT / ASCORA"
                        android:textColor="@color/gray_button"
                        android:textSize="@dimen/TextNormal"/>

                    <RelativeLayout
                        android:id="@+id/rl"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/appInstall"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:background="@drawable/btn_download"
                            android:gravity="center"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/install"
                            android:textColor="@color/White"
                            android:textSize="@dimen/TextBig"
                            android:textStyle="bold"/>


                        <ProgressBar
                            android:id="@+id/appInstallProgress"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <com.tempos21.market.ui.view.SizeChangeNotifyingTextView
                android:id="@+id/appDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/DarkGray"
                android:textSize="@dimen/TextNormal"/>

            <LinearLayout
                android:id="@+id/appScreenshotsLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <Gallery
                    android:id="@+id/appScreenshots"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:spacing="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/writeReview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/btn_download"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/write_review"
                    android:textColor="@color/White"
                    android:textSize="@dimen/TextBig"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textColor="@color/DarkGray"
                        android:textSize="@dimen/TextBig"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/appVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/DarkGray"
                        android:textSize="@dimen/TextBig"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/appSizeLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textColor="@color/DarkGray"
                        android:textSize="@dimen/TextBig"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/appSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textColor="@color/DarkGray"
                        android:textSize="@dimen/TextBig"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/TextView09"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publication_date"
                        android:textColor="@color/DarkGray"
                        android:textSize="@dimen/publication_date"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/appPublicationDate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="6"
                        android:minLines="1"
                        android:text="TextView"
                        android:textColor="@color/DarkGray"
                        android:textSize="@dimen/TextNormal"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/appProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="visible"/>


    <TextView
        android:id="@+id/appUnableLoad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:gravity="center"
        android:text="@string/unable_load"
        android:textColor="@color/DarkGray"
        android:textSize="@dimen/TextNormal"/>

</RelativeLayout>